--- a/pages/ContractInteraction.html
+++ b/pages/ContractInteraction.html
@@ -38,10 +38,10 @@
 				</div>
 				<div class="contractAddress">
 					<span>Contract address:</span>
-					<input type="text" class="address">
+					<input type="text" class="address" id="destination">
 				</div>
 				<select name="Function" id="function">
-					<option value="function" disabled selected>Function</option>
+					<option value="function" disabled selected>function...</option>
 
 				</select>
 
@@ -50,10 +50,16 @@
 					</ul>
 				</div>
 			</div>
+
+			<div class="send">
+				<button class="btn_send" id="btn_send">Send</button>
+			</div>
 		</main>
 	</div>
-
-	<script src="../abiParser.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+	<script type = "module" src="../scripts/processor.js"></script>
+	<script src="../scripts/abiParser.js"></script>
+	<script src="../scripts/metamask.js"></script>
 </body>
 
 </html>
