ECDSA signatures, tx outputs

--- a/pages/ABIEncoding.html
+++ b/pages/ABIEncoding.html
@@ -33,11 +33,11 @@
 		<main>
 			<div class="wrapper">
 				<div class="parse">
-					<textarea class="abi"></textarea>
+					<textarea class="abi" placeholder="ABI"></textarea>
 					<button class="btn_parse">Parse</button>
 				</div>
 				<select name="Function" id="">
-					<option disabled selected>Function</option>
+					<option disabled selected>function...</option>
 				</select>
 				<div class="argument">
 					<ul>
@@ -58,11 +58,7 @@
 					<button class="btnEncode">Encode</button>
 				</div>
 				<div class="Encoded">
-					<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia vel tenetur
-						voluptas error
-						dignissimos praesentium obcaecati aut. Porro vitae repellendus autem hic quasi maxime
-						reprehenderit illo
-						consequuntur, ab obcaecati!</p>
+					<p class="text">Encoded Data</p>
 					<button class="btn_parse">Copy</button>
 				</div>
 			</div>
