--- a/pages/ContractInteraction.html
+++ b/pages/ContractInteraction.html
@@ -63,7 +63,7 @@
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script type = "module" src="../scripts/contractinteraction.js"></script>
-	<script src="../scripts/abiparser.js"></script>
+	<script src="../scripts/abiParser.js"></script>
 	<script src="../scripts/metamask.js"></script>
 </body>
 
